--- a/src/App.css
+++ b/src/App.css
@@ -20,14 +20,48 @@
   text-align: center;
 }
 
-input[type='checkbox'] {
-  width:20px;
-  height:20px;
-  border-radius:5px;
-  border:2px solid #555;
+input[type="checkbox"] {
+  width: 20px;
+  height: 20px;
+  border-radius: 5px;
+  border: 2px solid #555;
 }
-input[type='checkbox']:checked {
+input[type="checkbox"]:checked {
   background: rgb(24, 24, 29);
+}
+
+.loader {
+  position: absolute;
+  top: 38%;
+  left: 42%;
+  /* margin-top: -60px;
+  margin-left: 100px; */
+  border: 30px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 30px solid var(--mainPurple);
+  width: 220px;
+  height: 220px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .App-screen {
@@ -46,11 +80,10 @@ input[type='checkbox']:checked {
   pointer-events: none;
 }
 
-.editablecell:hover{
+.editablecell:hover {
   color: var(--mainPurple);
   transform: scale(1.5, 1.5);
   transition: transform 0.2s;
-  
 }
 
 @media (prefers-reduced-motion: no-preference) {
