--- a/src/App.css
+++ b/src/App.css
@@ -107,6 +107,11 @@ input[type="checkbox"]:checked {
   color: #61dafb;
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
