--- a/src/admin/NewCase/Navigation.css
+++ b/src/admin/NewCase/Navigation.css
@@ -1,3 +1,67 @@
+
+.navigation-container {
+  position: absolute;
+  left: 0;
+  width: 20%;
+  display: flex;
+  /* flex-wrap: wrap; */
+  justify-content: center;
+  align-items: center;
+  /* margin-bottom: 20px; */
+  overflow-y: auto; /* add this line */
+  padding-top: 3%;
+  /* background-color: #e1e; */
+}
+
+.navigation-steps {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  /* width: 100%; */
+  /* background-color: #e1e; */
+}
+
+.navigation-steps > * {
+  margin: 10px;
+  /* width: 100%; */
+}
+
+
+.navigation-steps {
+  display: flex;
+  /* width: 100%; */
+  flex-direction: column;
+   /* Change flex-direction to column */
+}
+
+.navigation-steps button {
+  margin-bottom: 10px; /* Add some margin between buttons */
+  /* width: 100%; */
+}
+  
+  .active {
+  background-color: #333;
+  color: #fff;
+  
+  }
+  
+  .MuiFormControl-root {
+  margin-right: 10px;
+  }
+  
+  .MuiInputBase-root {
+  color: #fff;
+  }
+  
+  .MuiFormLabel-root {
+  color: #fff;
+  }
+  
+  
+  
+  
+
 .navigation {
     display: flex;
     justify-content: center;
