--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   --mainWhite: #f3f3f3;
   --mainDark: #232528;
   --mainYellow: #ffa400;
-  --mainPurple: #6600ff;
+  --mainPurple: #18ab1b;
   --highlightedPurple: #6600ff13;
 }
 
