--- a/src/admin/NewCase/Navigation.css
+++ b/src/admin/NewCase/Navigation.css
@@ -1,108 +1,40 @@
-
 .navigation-container {
-  position: absolute;
-  left: 0;
-  width: 20%;
-  display: flex;
-  /* flex-wrap: wrap; */
+  /* position: absolute; */
+  /* left: 0; */
+  width: 30%;
+  /* display: flex; */
   justify-content: center;
   align-items: center;
-  /* margin-bottom: 20px; */
-  overflow-y: auto; /* add this line */
-  padding-top: 3%;
-  /* background-color: #e1e; */
+  /* overflow-y: auto; */
+  /* padding-top: 3%; */
+  /* background-color: #30f; */
+}
+
+.sticky {
+  position: sticky;
+  top: 0;
 }
 
 .navigation-steps {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
-  /* width: 100%; */
-  /* background-color: #e1e; */
+  /* align-items: center; */
+  /* flex-direction: column; */
+  width: 100%; /* Add this line to make the navigation steps take the full width */
 }
 
 .navigation-steps > * {
   margin: 10px;
-  /* width: 100%; */
+  width: 100%; 
+
 }
 
-
-.navigation-steps {
+/* Add the following CSS to make the tocItem fill the available space */
+.tocItem {
   display: flex;
-  /* width: 100%; */
-  flex-direction: column;
-   /* Change flex-direction to column */
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  background-color: #ff0;
 }
-
-.navigation-steps button {
-  margin-bottom: 10px; /* Add some margin between buttons */
-  /* width: 100%; */
-}
-  
-  .active {
-  background-color: #333;
-  color: #fff;
-  
-  }
-  
-  .MuiFormControl-root {
-  margin-right: 10px;
-  }
-  
-  .MuiInputBase-root {
-  color: #fff;
-  }
-  
-  .MuiFormLabel-root {
-  color: #fff;
-  }
-  
-  
-  
-  
-
-.navigation {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 2rem;
-  }
-  
-  .navigation ul {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .navigation li {
-    margin-right: 1rem;
-  }
-  
-  .navigation li:last-child {
-    margin-right: 0;
-  }
-  
-  .navigation li a {
-    display: block;
-    padding: 0.5rem 1rem;
-    text-decoration: none;
-    color: #555;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    transition: background-color 0.2s ease-in-out;
-  }
-  
-  .navigation li a.active {
-    color: #fff;
-    background-color: #555;
-  }
-
-  /* .navigation-steps button.active {
-    background-color: blue;
-    color: white;
-  }
-   */
